# shrekify

./: docker-compose.yaml  pip.txt  shrek.ipynb  shrek.py
.github/workflows/: gallery-backend-deploy.yaml  gallery-fe-deploy.yaml
backend/: .gitignore  README.md  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  manage.py  pyproject.toml
backend/api/: ml_sd15.py  models.py  prompts_config.json  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/api/ml/: __init__.py  config.py  image_utils.py  ml_sd15.py  pipeline.py
backend/api/ml/configs/: generation_config.json  model_config.json  prompts_config.json
backend/api/ml/controlnets/: __init__.py  canny.py  depth.py  lineart.py  loader.py  openpose.py  softedge.py
backend/backend/: settings.py  urls.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  apiClient.ts  main.tsx
gallery/backend/: .env.example  .gitignore  README.md  main.py  manage.py  pyproject.toml
gallery/backend/gallery_api/: asgi.py  settings.py  urls.py  wsgi.py
gallery/backend/storage/: __init__.py  admin.py  models.py  serializers.py  views.py
gallery/backend/storage/application/: __init__.py  service.py
gallery/backend/storage/domain/: __init__.py  models.py  serializers.py
gallery/backend/storage/infrastructure/: __init__.py  repository.py
gallery/backend/storage/management/commands/: init_db.py
gallery/backend/storage/migrations/: 0001_initial.py
gallery/backend/storage/presentation/: __init__.py  urls.py  views.py
gallery/frontend/: .env.example  eslint.config.js  (+2 more)
(+58 files in other folders)
